--- a/build.gradle
+++ b/build.gradle
@@ -66,5 +66,11 @@ project(':discovery-service') {
     }
 }
 
+project(':config-service') {
+    dependencies {
+        implementation 'org.springframework.cloud:spring-cloud-config-server'
+    }
+}
+
 
 
