--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
 rootProject.name = 'outer-service'
-include 'apigateway-service', 'discovery-service'
+include 'apigateway-service', 'discovery-service', 'config-service'
