feat: docker compose 설정

--- a/apigateway-service/src/main/resources/application.yml
+++ b/apigateway-service/src/main/resources/application.yml
@@ -27,3 +27,13 @@ spring:
             - RewritePath=/api/demo, /demo
             - RewritePath=/api/demo/(?<segment>.*), /demo/$\{segment}
             - CustomFilter
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh, health, beans, busrefresh
