--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ allprojects {
     }
 
     dependencies {
+        implementation 'org.springframework.boot:spring-boot-starter-actuator'
+        implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
         compileOnly 'org.projectlombok:lombok'
         annotationProcessor 'org.projectlombok:lombok'
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -47,6 +49,10 @@ allprojects {
 
     tasks.named('test') {
         useJUnitPlatform()
+    }
+
+    jar {
+        enabled = false
     }
 }
 
