fix: docker-compose.yml 및 nginx.conf 수정

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,7 +56,7 @@ services:
       - rabbitmq
       - discovery-service
     environment:
-      - ENCRYPT_KEY={ENCRYPT_KEY}
+      - ENCRYPT_KEY=${ENCRYPT_KEY}
     networks:
       - spring-cloud-network
   rabbitmq:
