--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    listen 80 default_server;
+    listen 80;
 
     location / {
         root /usr/share/nginx/html;
@@ -8,7 +8,7 @@ server {
 }
 
 server {
-    listen 3000 default_server;
+    listen 3000;
 
     location /api/ {
         proxy_pass http://apigateway-service:8000;
