--- a/nginx.conf
+++ b/nginx.conf
@@ -1,20 +1,34 @@
-server {
-    listen 80;
+worker_processes 1;
 
-    location / {
-        root /usr/share/nginx/html;
-        try_files $uri /index.html;
+events { worker_connections 1024; }
+
+http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
+    sendfile on;
+    keepalive_timeout 65;
+
+    # 리액트 빌드 파일 서빙
+    server {
+        listen 80 default_server;
+
+        location / {
+            root /usr/share/nginx/html;
+            try_files $uri /index.html;
+        }
     }
-}
 
-server {
-    listen 3000;
+    # API 요청 프록시
+    server {
+        listen 9000 default_server;
 
-    location /api/ {
-        proxy_pass http://apigateway-service:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        location /api/ {
+            proxy_pass http://apigateway-service:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     }
 }
