feat: docker-compose.yml 에서 discovery service health check 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,12 @@ services:
     restart: always
     depends_on:
       - rabbitmq
+    healthcheck :
+      test : "curl --fail --silent localhost:8761/actuator/health | grep UP || exit 1"
+      interval : 20s
+      timeout : 5s
+      retries : 3
+      start_period : 20s
     networks:
       - spring-cloud-network
   config-service:
