fix: api gateway 및 discovery service 유레카 클라이언트 설정 정보 수정

--- a/discovery-service/src/main/resources/application.yml
+++ b/discovery-service/src/main/resources/application.yml
@@ -5,6 +5,9 @@ spring:
   application:
     name: discovery-service
 eureka:
+  instance :
+    instance-id : ${spring.application.name}:${spring.application.instance_id:${random.value}}
+    hostname : 3.39.52.110
   client:
     register-with-eureka: false
     fetch-registry: false
