--- a/apigateway-service/src/main/resources/application.yml
+++ b/apigateway-service/src/main/resources/application.yml
@@ -43,6 +43,9 @@ spring:
     username: guest
     password: guest
 eureka:
+  instance:
+    instance-id: ${spring.cloud.client.hostname}:${spring.application.instance_id:${random.value}}
+    hostname: 3.39.52.110
   client:
     register-with-eureka: true
     fetch-registry: true
@@ -66,6 +69,9 @@ spring:
     password: guest
 
 eureka:
+  instance :
+    instance-id : ${spring.application.name}:${spring.application.instance_id:${random.value}}
+    hostname : 3.39.52.110
   client:
     register-with-eureka: true
     fetch-registry: true
