--- a/apigateway-service/src/main/resources/application.yml
+++ b/apigateway-service/src/main/resources/application.yml
@@ -33,10 +33,12 @@ spring:
         - id: property-service
           uri: lb://PROPERTY-SERVICE
           predicates:
-              - Path=/api/properties/**
+              - Path=/api/properties/**, api/districts/**
           filters:
               - RewritePath=/api/properties, /properties
               - RewritePath=/api/properties/(?<segment>.*), /properties/$\{segment}
+              - RewritePath=/api/districts, /districts
+              - RewritePath=/api/districts/(?<segment>.*), /districts/$\{segment}
         # 대출 서비스
         - id: loan-service
           uri: lb://LOAN-SERVICE
