--- a/nginx.conf
+++ b/nginx.conf
@@ -24,6 +24,15 @@ http {
         listen 3000 default_server;
 
         location /api/ {
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PUT, PATCH, OPTIONS';
+                add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, Cookie';
+                add_header 'Access-Control-Max-Age' 86400;
+                return 204;
+            }
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Content-Type' 'application/json' always;
             proxy_pass http://apigateway-service:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
