--- a/nginx.conf
+++ b/nginx.conf
@@ -24,10 +24,13 @@ http {
         listen 3000 default_server;
 
         location /api/ {
-            add_header 'Access-Control-Allow-Origin' 'http://www.billybang.me';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Requested-With';
-            add_header 'Access-Control-Allow-Credentials' 'true';
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' 'http://www.billybang.me';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
+                add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Requested-With';
+                add_header 'Access-Control-Allow-Credentials' 'true';
+                return 204;
+            }
 
             proxy_pass http://apigateway-service:8000;
             proxy_set_header Host $host;
