--- a/nginx.conf
+++ b/nginx.conf
@@ -9,6 +9,21 @@ http {
     sendfile on;
     keepalive_timeout 65;
 
+    map $http_origin $skip_allow_origin {
+        default "";
+        "~^(http://www\.billybang\.me)$" "";
+    }
+
+    map $http_access_control_request_method $skip_allow_methods {
+        default "";
+        "~^(GET|POST|PUT|DELETE|OPTIONS)$" "";
+    }
+
+    map $http_access_control_request_headers $skip_allow_headers {
+        default "";
+        "~^(Authorization|Content-Type|X-Requested-With)$" "";
+    }
+
     # 리액트 빌드 파일 서빙
     server {
         listen 80 default_server;
@@ -24,13 +39,24 @@ http {
         listen 3000 default_server;
 
         location /api/ {
-            if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Allow-Origin' 'http://www.billybang.me';
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
-                add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Requested-With';
-                add_header 'Access-Control-Allow-Credentials' 'true';
-                return 204;
-            }
+
+        # Access-Control-Allow-Origin 헤더 추가
+        if ($skip_allow_origin = "") {
+            add_header 'Access-Control-Allow-Origin' 'http://www.billybang.me';
+        }
+
+        # Access-Control-Allow-Methods 헤더 추가
+        if ($skip_allow_methods = "") {
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
+        }
+
+        # Access-Control-Allow-Headers 헤더 추가
+        if ($skip_allow_headers = "") {
+            add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Requested-With';
+        }
+
+        # Access-Control-Allow-Credentials 헤더 추가
+        add_header 'Access-Control-Allow-Credentials' 'true';
 
             proxy_pass http://apigateway-service:8000;
             proxy_set_header Host $host;
