feat: nginx.conf 에서 cors 설정

--- a/nginx.conf
+++ b/nginx.conf
@@ -10,18 +10,18 @@ http {
     keepalive_timeout 65;
 
     map $http_origin $skip_allow_origin {
-        default "";
-        "~^(http://www\.billybang\.me)$" "";
+        default 0;
+        "~^(http://www\.billybang\.me)$" 1;
     }
 
     map $http_access_control_request_method $skip_allow_methods {
-        default "";
-        "~^(GET|POST|PUT|DELETE|OPTIONS)$" "";
+        default 0;
+        "~^(GET|POST|PUT|DELETE|OPTIONS)$" 1;
     }
 
     map $http_access_control_request_headers $skip_allow_headers {
-        default "";
-        "~^(Authorization|Content-Type|X-Requested-With)$" "";
+        default 0;
+        "~^(Authorization|Content-Type|X-Requested-With)$" 1;
     }
 
     # 리액트 빌드 파일 서빙
@@ -40,23 +40,23 @@ http {
 
         location /api/ {
 
-        # Access-Control-Allow-Origin 헤더 추가
-        if ($skip_allow_origin = "") {
-            add_header 'Access-Control-Allow-Origin' 'http://www.billybang.me';
-        }
+            # Access-Control-Allow-Origin 헤더 추가
+            if ($skip_allow_origin = 0) {
+                add_header 'Access-Control-Allow-Origin' 'http://www.billybang.me';
+            }
 
-        # Access-Control-Allow-Methods 헤더 추가
-        if ($skip_allow_methods = "") {
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
-        }
+            # Access-Control-Allow-Methods 헤더 추가
+            if ($skip_allow_methods = 0) {
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
+            }
 
-        # Access-Control-Allow-Headers 헤더 추가
-        if ($skip_allow_headers = "") {
-            add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Requested-With';
-        }
+            # Access-Control-Allow-Headers 헤더 추가
+            if ($skip_allow_headers = 0) {
+                add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Requested-With';
+            }
 
-        # Access-Control-Allow-Credentials 헤더 추가
-        add_header 'Access-Control-Allow-Credentials' 'true';
+            # Access-Control-Allow-Credentials 헤더 추가
+            add_header 'Access-Control-Allow-Credentials' 'true';
 
             proxy_pass http://apigateway-service:8000;
             proxy_set_header Host $host;
