--- a/nginx.conf
+++ b/nginx.conf
@@ -38,25 +38,28 @@ http {
     server {
         listen 3000 default_server;
 
-        location /api/ {
-
+        location /api/users/ {
             # Access-Control-Allow-Origin 헤더 추가
-            if ($skip_allow_origin = 0) {
-                add_header 'Access-Control-Allow-Origin' 'http://www.billybang.me';
-            }
+            add_header 'Access-Control-Allow-Origin' 'http://www.billybang.me';
 
             # Access-Control-Allow-Methods 헤더 추가
-            if ($skip_allow_methods = 0) {
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
-            }
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
 
             # Access-Control-Allow-Headers 헤더 추가
-            if ($skip_allow_headers = 0) {
-                add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Requested-With';
-            }
+            add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Requested-With';
 
             # Access-Control-Allow-Credentials 헤더 추가
             add_header 'Access-Control-Allow-Credentials' 'true';
+
+            proxy_pass http://apigateway-service:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+        }
+
+        location /api/ {
 
             proxy_pass http://apigateway-service:8000;
             proxy_set_header Host $host;
