--- a/nginx.conf
+++ b/nginx.conf
@@ -61,6 +61,14 @@ http {
 
         location /api/ {
 
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' 'http://www.billybang.me';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PATCH, OPTIONS';
+                add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
+                add_header 'Access-Control-Allow-Credentials' 'true';
+                return 204;
+            }
+
             proxy_pass http://apigateway-service:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
