--- a/nginx.conf
+++ b/nginx.conf
@@ -40,7 +40,7 @@ http {
 
         location /api/users/ {
             # Access-Control-Allow-Origin 헤더 추가
-            add_header 'Access-Control-Allow-Origin' 'http://www.billybang.me, http://www.billybang.me:3000';
+            add_header 'Access-Control-Allow-Origin' 'http://www.billybang.me';
 
             # Access-Control-Allow-Methods 헤더 추가
             add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
@@ -62,7 +62,7 @@ http {
         location /api/ {
 
             if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Allow-Origin' 'http://www.billybang.me, http://www.billybang.me:3000';
+                add_header 'Access-Control-Allow-Origin' 'http://www.billybang.me';
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PATCH, OPTIONS';
                 add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
                 add_header 'Access-Control-Allow-Credentials' 'true';
