feat: nginx.conf 에서 cors 설정

--- a/nginx.conf
+++ b/nginx.conf
@@ -38,7 +38,7 @@ http {
     server {
         listen 3000 default_server;
 
-        location /api/users/ {
+        location ~ ^/(api/users/|api/login/) {
             # Access-Control-Allow-Origin 헤더 추가
             add_header 'Access-Control-Allow-Origin' 'http://www.billybang.me';
 
